contact names, captions added event page updated

--- a/trust/templates/events.html
+++ b/trust/templates/events.html
@@ -128,6 +128,53 @@
               </div>
             </div>
 
+            <div class="col" ontouchstart="this.classList.toggle('hover');">
+              <div class="container">
+                <div class="front" style="background-image: url(https://images.unsplash.com/photo-1542974460-358a399cae1e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)">
+                  <div class="inner">
+                    <p>Education Support (Vyasa)</p>
+                    <span>Read more</span>
+                  </div>
+                </div>
+                <div class="back">
+                  <div class="inner">
+                    <p>Through this service, the trust intends to provide continuing education for the children of economically disadvantaged families. </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col" ontouchstart="this.classList.toggle('hover');">
+              <div class="container">
+                <div class="front" style="background-image: url(https://images.unsplash.com/photo-1561730142-ad059b7887b0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)">
+                  <div class="inner">
+                    <p>Housing Project (Thanal)</p>
+                    <span>Read more</span>
+                  </div>
+                </div>
+                <div class="back">
+                  <div class="inner">
+                    <p>Under this project, the trust offers aid for people belonging to low income group and slum dwellers who struggle for finishing their house construction. </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col" ontouchstart="this.classList.toggle('hover');">
+              <div class="container">
+                <div class="front" style="background-image: url(https://images.unsplash.com/photo-1542974460-358a399cae1e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)">
+                  <div class="inner">
+                    <p>Zero Hunger (Feeding Program)</p>
+                    <span>Read more</span>
+                  </div>
+                </div>
+                <div class="back">
+                  <div class="inner">
+                    <p>A hunger elimination programme that align with nation's aspiration by providing one meal a day for at various venues.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
 
       		</div>
 </section>
