--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -236,7 +236,7 @@
 
                         <div class="on-hover hidden-xs">
 
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+                                <p> Caring together relies on volunteering and donations by members of the public to continue to provide care, support and advice to unpaid carers of all ages. With the generosity and kindness of these donations Travancore is able to continue to provide vital services long into the future.</p>
 
                         </div>
 
