--- a/trust/templates/volunteer.html
+++ b/trust/templates/volunteer.html
@@ -21,7 +21,7 @@
                 <div class="carousel-caption">
 
                   <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc";>Volunteer</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow "style="background-color:#404040cc";>Because they need your help....do not let them down</h4>
+                  <h4 class="carousel-subtitle bounceInUp animated slow "style="background-color:#404040cc";>“Service to others is the rent you pay for your room here on Earth.” — Muhammad Ali</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
