--- a/trust/templates/contact.html
+++ b/trust/templates/contact.html
@@ -84,7 +84,7 @@
                 <span class="contact-icon"> <i class="fa fa-map-marker"></i></span>Kochupurayil Buidling, Chennithala, PO Mavelikkara, Allappey. Pincode:- 690105</li>
                 <li class="footer-li"><span class="icon footer-icon"><i class="fa fa-phone"></i></span>
                   <span><a href="tel:+918086738848">Sajan George,&ensp;</a>
-                    <a href="tel:+918921799665">Harikrishnan Vijayan,&ensp;</span>
+                    <a href="tel:+918921799665">Harikrishna Vijayan,&ensp;</span>
                     <a href="tel:+919744492745">Lijo Thomas</a>
                   </li>
 
