captions and event page

--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -130,7 +130,7 @@
 												<h3 class="col-title">our mission</h3>
 												<div class="col-details">
 
-													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
+													<p>To provide basic necessities to people to help them as humanly possible for the less fortunate living in this world.</p>
 
 												</div>
 												<a href="#our-mission" class="btn btn-primary"> Read more </a>
@@ -150,7 +150,7 @@
 												<h3 class="col-title">Our aim</h3>
 												<div class="col-details">
 
-													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
+													<p>To establish, develop, maintain and grant aid in cash or kind to hostels, hospitals, medical colleges, nursing institutions...</p>
 
 												</div>
 												<a href="#content1" class="btn btn-primary"> Read more </a>
@@ -170,7 +170,7 @@
 												<h3 class="col-title">Help & support</h3>
 												<div class="col-details">
 
-													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
+													<p>What we have done for ourselves dies with us; what we have done for others remains and is immortal.</p>
 
 												</div>
 												<a href="{% url 'events' %}" class="btn btn-primary"> Read more </a>
@@ -190,7 +190,8 @@
 												<h3 class="col-title">our programs</h3>
 												<div class="col-details">
 
-													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
+													<p>FOR FOOD.  FOR WATER.</p>
+                          <p>FOR HEALTH.  FOR ALL.</p>
 
 												</div>
 												<a href="{% url 'project' %}" class="btn btn-primary"> Read more </a>
