--- a/trust/templates/events.html
+++ b/trust/templates/events.html
@@ -146,7 +146,7 @@
 
             <div class="col" ontouchstart="this.classList.toggle('hover');">
               <div class="container">
-                <div class="front" style="background-image: url(https://images.unsplash.com/photo-1561730142-ad059b7887b0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)">
+                <div class="front" style="background-image: url(https://images.unsplash.com/photo-1541912686043-1eabf246e2c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)">
                   <div class="inner">
                     <p>Housing Project (Thanal)</p>
                     <span>Read more</span>
@@ -162,7 +162,7 @@
 
             <div class="col" ontouchstart="this.classList.toggle('hover');">
               <div class="container">
-                <div class="front" style="background-image: url(https://images.unsplash.com/photo-1542974460-358a399cae1e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)">
+                <div class="front" style="background-image: url(https://images.pexels.com/photos/4959226/pexels-photo-4959226.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500)">
                   <div class="inner">
                     <p>Zero Hunger (Feeding Program)</p>
                     <span>Read more</span>
