--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -22,7 +22,7 @@
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc";>Your healing begins with charity</h2>
+                  <h2 class="carousel-title bounceInDown animated slow" style="background-color:#404040cc";>" Your healing begins with charity "</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow "style="background-color:#404040cc"></h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
@@ -112,7 +112,7 @@
                         <h3 class="col-title">our mission</h3>
                         <div class="col-details">
 
-                          <p>To provide basic necessities to people to help them as humanly possible for the less fortunate living in this world</p>
+                          <p>To provide basic necessities to people to help them as humanly possible for the less fortunate living in this world.</p>
 
                         </div>
                         <a href="{% url 'about' %}" class="btn btn-primary"> Read more </a>
@@ -275,7 +275,7 @@
 
                       <div class="on-hover hidden-xs">
 
-                              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+                              <p>Standing for them and spreading the word about poverty is equally important as working to alleviate it. This is because more the people know and understand the cause there are more chances of them getting involved in the process of working towards tackling it.</p>
 
                       </div>
                   </div>
@@ -298,7 +298,7 @@
 
                       <div class="on-hover hidden-xs">
 
-                              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+                              <p> Millions of children in India go to bed hungry because their parents/guardians are not able to purchase food for them. Most of them drop out from schools so that they can help their parents and supplement the family income. We focus on putting in selfless efforts in providing real benefits to the people and bring about the change.</p>
 
                       </div>
 
