Email setup done for client

--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -195,7 +195,7 @@
                                 <ul class="footer-ul">
                 	                <li class="footer-li"><a href="https://www.google.co.in/maps/search/Chennithala,+PO+Mavelikkara,+Allappey/@9.2616822,76.4986127,13z/data=!3m1!4b1">
                                     <span class="contact-icon footer-icon"> <i class="fa fa-map-marker"></i></span>
-                                  <span>Kochupurayil building, Chennithala, PO Mavelikkara, Allappey. Pincode:- 690105</span>
+                                  <span>Kochupurayil Building, Chennithala, PO Mavelikkara, Allappey. Pincode:- 690105</span>
                                 </a>
                                 </li>
                 	                <li class="footer-li"><span class="icon footer-icon"><i class="fa fa-phone"></i></span>
