--- a/trust/templates/contact.html
+++ b/trust/templates/contact.html
@@ -74,7 +74,7 @@
 
 					<h2 class="title-style-2">CONTACTS <span class="title-under"></span></h2>
 					<p>
-						<b>The Travancore</b> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla .
+						<b>The Travancore</b> is a Charitable Trust based in Kerala which work for the societ and needy people. Travancore will got to their extent to help people in any field either be Education, Poverty, Farming and many more.
 					</p>
 
 					<div class="contact-items">
