--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -222,7 +222,7 @@
 
 			                        <div class="thumnail">
 
-			                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
+			                            <img class="owner-img" src="{% static 'assets/images/Sajan.jpeg' %}" alt="" class="cause-img">
 
 			                        </div>
 
@@ -235,10 +235,10 @@
 			                        </div>
 
 			                        <div class="btn-holder">
-			                          <a href="mailto:gsajan52@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
+			                          <a href="mailto:sajangeorge6040@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
 			                          <a href=#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
 			                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
-			                          <a href="tel:+918086738848" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
+			                          <a href="tel:+918848750988" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
 
 			                        </div>
 
@@ -255,7 +255,7 @@
 
 			                        <div class="thumnail">
 
-			                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
+			                            <img class="owner-img" src="{% static 'assets/images/Hari.jpeg' %}" alt="" class="cause-img">
 
 			                        </div>
 
@@ -289,7 +289,7 @@
 
 			                        <div class="thumnail">
 
-			                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
+			                            <img class="owner-img" src="{% static 'assets/images/Lijo.jpeg' %}" alt="" class="cause-img">
 
 			                        </div>
 
