--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -222,7 +222,7 @@
 
 			                        <div class="thumnail">
 
-			                            <img class="owner-img" src="{% static 'assets/images/Sajan.jpeg' %}" alt="" class="cause-img">
+			                            <img class="owner-img" src="{% static 'assets/images/Sajan.png' %}" alt="" class="cause-img">
 
 			                        </div>
 
@@ -255,7 +255,7 @@
 
 			                        <div class="thumnail">
 
-			                            <img class="owner-img" src="{% static 'assets/images/Hari.jpeg' %}" alt="" class="cause-img">
+			                            <img class="owner-img" src="{% static 'assets/images/Hari.png' %}" alt="" class="cause-img">
 
 			                        </div>
 
@@ -289,7 +289,7 @@
 
 			                        <div class="thumnail">
 
-			                            <img class="owner-img" src="{% static 'assets/images/Lijo.jpeg' %}" alt="" class="cause-img">
+			                            <img class="owner-img" src="{% static 'assets/images/Lijo.png' %}" alt="" class="cause-img">
 
 			                        </div>
 
