owner name updated

--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -261,7 +261,7 @@
 
 
 
-			                        <h4 class="member-name">Harikrishnan Vijayan</h4>
+			                        <h4 class="member-name">Harikrishna Vijayan</h4>
 
 			                        <div class="member-position">
 			                            CO-FOUNDER
