--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -115,8 +115,8 @@
                     <li><a href="{% url 'events' %}">EVENTS</a></li>
                     <li><a href="{% url 'project' %}">PROJECTS
                       <ul class="submenu">
-                        <li class="submenu-item"><a href="{% url 'events' %}"> Project abc</a></li>
-                        <li class="submenu-item"><a href="{% url 'fundraising' %}"> Project def</a></li>
+                        <li class="submenu-item"><a href=""> Project abc</a></li>
+                        <li class="submenu-item"><a href=""> Project def</a></li>
                       </ul> </a> </li>
                       <li><a href="{% url 'certificate' %}">CERTIFICATES</a></li>
                     <li><a href="{% url 'volunteer' %}">VOLUNTEER</a></li>
@@ -169,8 +169,8 @@
                                         </li>
                                         <li><a href="{% url 'project' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> PROJECTS</a>
                                           <ul class="submenu" style="list-style: none">
-                                            <li class="submenu-item" ><a href="{% url 'events' %}"><span></span> PROJECT A</a></li>
-                                            <li class="submenu-item"><a href="{% url 'fundraising' %}"> PROJECT B</a></li>
+                                            <li class="submenu-item" ><a href=""><span></span> PROJECT A</a></li>
+                                            <li class="submenu-item"><a href=""> PROJECT B</a></li>
                                           </ul> </li>
                                         <li><a href="{% url 'volunteer' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> VOLUNTEER</a></li>
                                         <li><a href="{% url 'contact' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> CONTACT US</a></li>
