gallery page added

--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -113,6 +113,7 @@
                     <li><a href="{% url 'index' %}">HOME</a></li>
                     <li><a href="{% url 'about' %}">ABOUT</a></li>
                     <li><a href="{% url 'events' %}">EVENTS</a></li>
+                    <li><a href="{% url 'gallery' %}">GALLERY</a></li>
                     <li><a href="{% url 'project' %}">PROJECTS
                       <ul class="submenu">
                         <li class="submenu-item"><a href=""> Project abc</a></li>
