Certificate page and gallery fixed

--- a/trust/templates/gallery.html
+++ b/trust/templates/gallery.html
@@ -25,7 +25,7 @@
 
 		<div class="container gallery fadeIn animated">
 
-			<div class="row">
+			<div class="row-gallery">
 
 
 					<!-- <a href="assets/images/gallery/7610291856_931fb9f461_k.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
