--- a/trust/templates/gallery.html
+++ b/trust/templates/gallery.html
@@ -14,7 +14,6 @@
 
 			<h1 class="page-title">GALLERY <span class="title-under"></span></h1>
 			<p class="page-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit Necessitatibus.
 			</p>
 
 		</div>
@@ -22,6 +21,7 @@
 	</div>
 
 	<div class="main-container">
+    <h2 style="margin-top: 100px;" class="title-style-1">Lives Touched &#x2764;	<span class="title-under"></span></h2>
 
 		<div class="container gallery fadeIn animated">
 
