Gallery updated, poject dropdown removed

--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -115,10 +115,10 @@
                     <li><a href="{% url 'events' %}">EVENTS</a></li>
                     <li><a href="{% url 'gallery' %}">GALLERY</a></li>
                     <li><a href="{% url 'project' %}">PROJECTS
-                      <ul class="submenu">
-                        <li class="submenu-item"><a href=""> Project abc</a></li>
-                        <li class="submenu-item"><a href=""> Project def</a></li>
-                      </ul> </a> </li>
+                      <!-- <ul class="submenu">
+                        <li class="submenu-item"><a href=""> Project A</a></li>
+                        <li class="submenu-item"><a href=""> Project B</a></li>
+                      </ul> --></a> </li> 
                       <li><a href="{% url 'certificate' %}">CERTIFICATES</a></li>
                     <li><a href="{% url 'volunteer' %}">VOLUNTEER</a></li>
                     <li><a href="{% url 'contact' %}">CONTACT US</a></li>
