--- a/trust/templates/gallery.html
+++ b/trust/templates/gallery.html
@@ -28,19 +28,30 @@
 			<div class="row-gallery">
 
 
-					<!-- <a href="assets/images/gallery/7610291856_931fb9f461_k.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
+					<a href="assets/images/gallery/7610291856_931fb9f461_k.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-						<img class src="{% static 'assets/images/gallery/thumb/7610291856_931fb9f461_k.jpg' %}" alt="">
+						<img class src="{% static 'assets/images/travancore/_MG_9016.JPG' %}" alt="">
 
 						<!-- <span class="on-hover">
 							<span class="hover-caption">Image Caption</span>
 						</span> -->
 
-					<!-- </a> <! /.gallery-item -->
+					 </a><!-- <! /.gallery-item -->
 
-					<!-- <a href="assets/images/gallery/children-82272_1280.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
+					<a href="assets/images/gallery/children-82272_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-						<img src="{% static 'assets/images/gallery/thumb/children-82272_1280.jpg' %}" alt="">
+						<img src="{% static 'assets/images/travancore/_MG_8985.JPG' %}" alt="">
+
+						<!-- <span class="on-hover">
+							<span class="hover-caption">Image Caption</span>
+						</span> -->
+
+					 <!-- /.gallery-item -->
+</a>
+
+					<a href="assets/images/gallery/human-rights.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
+
+						<img src="{% static 'assets/images/travancore/_MG_8991.JPG' %}" alt="">
 
 						<!-- <span class="on-hover">
 							<span class="hover-caption">Image Caption</span>
@@ -48,31 +59,20 @@
 
 					 <!-- /.gallery-item -->
 
+</a>
+					<a href="assets/images/gallery/old-books-436498_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-					<!-- <a href="assets/images/gallery/human-rights.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
-
-						<img src="{% static 'assets/images/gallery/thumb/human-rights.jpg' %}" alt="">
-
-						<!-- <span class="on-hover">
-							<span class="hover-caption">Image Caption</span>
-						</span> -->
-
-					 <!-- /.gallery-item -->
-
-
-					<!-- <a href="assets/images/gallery/old-books-436498_1280.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
-
-						<img src="{% static 'assets/images/gallery/thumb/old-books-436498_1280.jpg' %}" alt="">
+						<img src="{% static 'assets/images/travancore/_MG_8993.JPG' %}" alt="">
 
 						<!-- <span class="on-hover">
 							<span class="hover-caption">Image Caption</span>
 						</span> -->
 
 					 <!-- /.gallery-item -->
+</a>
+					<a href="assets/images/gallery/hunger-682834_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-					<!-- <a href="assets/images/gallery/hunger-682834_1280.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
-
-						<img src="{% static 'assets/images/gallery/thumb/hunger-682834_1280.jpg' %}" alt="">
+						<img src="{% static 'assets/images/travancore/_MG_9004.JPG' %}" alt="">
 
 						<!-- <span class="on-hover">
 							<span class="hover-caption">Image Caption</span>
@@ -80,72 +80,85 @@
 
 					</a> <! /.gallery-item -->
 
-					<!-- <a href="assets/images/gallery/africa-education.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
+					<a href="assets/images/gallery/africa-education.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-						<img src="{% static 'assets/images/gallery/thumb/africa-education.jpg' %}" alt="">
+						<img src="{% static 'assets/images/travancore/_MG_9054.JPG' %}" alt="">
 
 						<!-- <span class="on-hover">
 							<span class="hover-caption">Image Caption</span>
 						</span>
 
-					</a> <!/.gallery-item -->
+					<!/.gallery-item -->
+</a>
 
+					<a href="assets/images/gallery/afghani-60798_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-					<!-- <a href="assets/images/gallery/afghani-60798_1280.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
-
-						<img src="{% static 'assets/images/gallery/thumb/afghani-60798_1280.jpg' %}" alt="">
-
-						<!-- <span class="on-hover">
-							<span class="hover-caption">Image Caption</span>
-						</span> -->
-
-					<!-- </a> <! /.gallery-item -->
-
-					<!-- <a href="assets/images/gallery/boy-60729_1280.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
-
-						<img src="{% static 'assets/images/gallery/thumb/boy-60729_1280.jpg' %}" alt="">
+						<img src="{% static 'assets/images/travancore/_MG_9021.JPG' %}" alt="">
 
 						<!-- <span class="on-hover">
 							<span class="hover-caption">Image Caption</span>
 						</span> -->
 
-					<!-- </a> <!-/.gallery-item -->
+					  </a> <!--<! /.gallery-item  -->
 
+					<a href="assets/images/gallery/boy-60729_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-					<!-- <a href="assets/images/gallery/child-207573_1280.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
-
-						<img src="{% static 'assets/images/gallery/thumb/child-207573_1280.jpg' %}" alt="">
+						<img src="{% static 'assets/images/travancore/_MG_9023.JPG' %}" alt="">
 
 						<!-- <span class="on-hover">
 							<span class="hover-caption">Image Caption</span>
 						</span> -->
 
-					<!-- </a>
+					 </a><!-- <!-/.gallery-item -->
 
 
-					<! <a href="assets/images/gallery/children-60654_1280.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
+					<a href="assets/images/gallery/child-207573_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-						<img src="{% static 'assets/images/gallery/thumb/children-60654_1280.jpg' %}" alt="">
+						<img src="{% static 'assets/images/travancore/_MG_9026.JPG' %}" alt="">
+
+						<!-- <span class="on-hover">
+							<span class="hover-caption">Image Caption</span>
+						</span> -->
+
+					</a>
+
+
+					<a href="assets/images/gallery/children-60654_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
+
+						<img src="{% static 'assets/images/travancore/_MG_9048.JPG' %}" alt="">
 
 						<!-- <span class="on-hover">
 							<span class="hover-caption">Image Caption</span>
 						</span> -->
 
 					 <!-- /.gallery-item -->
+         </a>
 
-					<!-- <a href="assets/images/gallery/doll-87407_1280.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
+         <a href="assets/images/gallery/children-60654_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-						<img src="{% static 'assets/images/gallery/thumb/doll-87407_1280.jpg' %}" alt="">
+           <img src="{% static 'assets/images/travancore/_MG_8933.JPG' %}" alt="">
 
-						<!-- <span class="on-hover">
-							<span class="hover-caption">Image Caption</span>
-						</span> -->
+           <!-- <span class="on-hover">
+             <span class="hover-caption">Image Caption</span>
+           </span> -->
 
-				 <!-- /.gallery-item -->
+          <!-- /.gallery-item -->
+        </a>
 
-					<!-- <a href="assets/images/gallery/girl-62328_1280.jpg" class="col-md-3 col-sm-4 gallery-item lightbox"> -->
+        <a href="assets/images/gallery/children-60654_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox">
 
-						<img src="{% static 'assets/images/gallery/thumb/girl-62328_1280.jpg' %}" alt="">
+          <img src="{% static 'assets/images/travancore/_MG_9053.JPG' %}" alt="">
+
+          <!-- <span class="on-hover">
+            <span class="hover-caption">Image Caption</span>
+          </span> -->
+
+         <!-- /.gallery-item -->
+       </a>
+
+					<!-- <a href="assets/images/gallery/girl-62328_1280.jpg" class="col-md-4 col-sm-3 gallery-item lightbox"> -->
+
+						<!-- <img src="{% static 'assets/images/gallery/thumb/girl-62328_1280.jpg' %}" alt=""> -->
 
 						<!-- <span class="on-hover">
 							<span class="hover-caption"></span>
