Changed about's logo img

--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -24,7 +24,7 @@
 				<div class="col-md-6">
 
 					<!-- <img src="{% static 'assets/images/test-images/240_F_186411793_STZlj8Cc2aqhovZJ5UTFwG2mzaZPtQeB.jpg' %}" alt="" class="img-responsive"> -->
-					<img src="{% static 'assets/images/logo4.png' %}" alt="" class="img-responsive">
+					<img src="{% static 'assets/images/the_travancore_logo-1.png' %}" alt="" class="img-responsive">
 				</div>
 
 				<div class="col-md-6">
