spam if condition given

--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -409,7 +409,7 @@
         </div>
 
 
-    </div> <!-- /.our-sponsors --> -->
+    </div> <!-- /.our-sponsors -->
 
     <script type="text/javascript">
       var myCounter = 0;
