--- a/trust/templates/temp.html
+++ b/trust/templates/temp.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block body_block %}
 
-<!-- <section class="temp" style="text-align: center;padding-top: 150px; padding-bottom: 150px;">
+<section class="temp" style="text-align: center;padding-top: 150px; padding-bottom: 150px;">
   <img src="https://gagangowda89.github.io/Divgan/images/workinprogress.gif" alt="">
-</section> -->
+</section>
 
 <style media="screen">
 
