Certificate name correction

--- a/trust/templates/certificate.html
+++ b/trust/templates/certificate.html
@@ -60,7 +60,7 @@
 
                         <div class="reasons-titles">
 
-                            <h3 class="reasons-title">ATG (under progress)</h3>
+                            <h3 class="reasons-title">80G (under progress)</h3>
                             <!-- <h5 class="reason-subtitle">We are humans</h5> -->
 
                         </div>
